--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "jquery": "*",
     "nodemon": "*",
     "socket.io": "^2.0.3",
-    "ws": "^3.2.0"
+    "ws": "^3.2.0",
+    "body-parser": "*"
   },
   "repository": {
     "type": "git",
